Testing apporach with aggregationProcessor pre and post phases
Signed-off-by: Martin Gaievski <gaievski@amazon.com>